assets/css/style.css
body {
    height: 100%;
    margin: 0;
    display: flex;
    min-height: 100vh;
    flex-direction: column;
}

.mainwidth {
    width: 960px;
    margin: 0 auto;
}

/* Header styling */

header {
    background-color: #ffffff;
    border-bottom: 2px solid #cccccc;
    height: 70px;
    overflow: hidden;
    font-family: 'Georgia', Times, 'Times New Roman', serif;
}

a {
    text-decoration: none;
    color: #777777;
}

h1 {
    background-color: #4aaaa5;
    color: #ffffff;
    margin: auto;
    padding: 17px;
    float: left;
    height: 100%;
    font-weight: lighter;
}

h4 {
    color: #777777;
    float: right;
    display: inline;
    padding: 10px;
    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
    font-weight: lighter;
}

.borderright {
    border-right: 1px solid #777777;
    height: 5px;
}
/* End Header styling */


/* About Me styling */
.maincontent {
    background-color: #ffffff;
    width: 608px;
    float: left;
    padding: 20px;
    border: 1px solid #dddddd;
    margin-top: 20px;
    margin-bottom: 20px;
    margin-right: 20px;
}

h2 {
    border-bottom: 3px solid #dddddd;
    padding-bottom: 20px;
    font-family: 'Georgia', Times, 'Times New Roman', serif;
    color: #4aaaa5;
}

.myphoto {
    height: 200px;
    width: 200px;
    float: left;
    margin-right: 20px;
    margin-bottom: 20px;
}

p {
    color: #777777;
    font-size: 16px;
    line-height: 24px;
    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
    margin-bottom: 0;
}
/* End About Me styling */


/* Portfolio styling */
.portfolioimage {
    float: left;
    margin-top: 28px;
    margin-bottom: 28px;
    overflow: hidden;
    position: relative;
}

h5 {
    background-color: #4aaaa5;
    color: #ffffff;
    padding: 17px 0;
    float: left;
    font-family: 'Georgia', Times, 'Times New Roman', serif;
    font-weight: lighter;
    position: absolute;
    width: 100%;
    margin: 0;
    bottom: 15px;
    text-align: center;
    font-size: 20px;
}

.onleft {
    margin-right: 29px;
}

.onright {
    margin-left: 29px;
}
/* End Portfolio styling */


/* Contact styling */
textarea {
    width: 300px;
    height: 150px;;
}

#textresize {
    resize: both;
    overflow: auto;
}

button {
    height: 50px;
    background-color: #4aaaa5;
    color: #ffffff;
    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
    font-size: 18px;
    padding: 0 30px;
    margin-top: 10px;
}
/* End Contact styling */



/* Sidebar styling */
.sidebar {
    background-color: #ffffff;
    width: 228px;
    float: left;
    padding: 20px;
    border: 1px solid #dddddd;
    margin-top: 20px;   
    margin-left: 20px;
}

.connectimage {
    height: 60px;
    width: 60px;
    float:left;
}

h3 {
    border-bottom: 3px solid #dddddd;
    padding-bottom: 20px;
    color: #4aaaa5;
    font-family: 'Georgia', Times, 'Times New Roman', serif;
}
/* End Sidebar styling */


/* Footer styling */
footer {
    width: 100%;
    background-color:#666666;
    color: #999999 !important;
    padding-top: 12px;
    padding-bottom: 12px;
    border-top: 5px solid #4aaaa5;
    text-align: center;
    flex: 1;

}
/* End Footer styling */




/* General styling */
.fontcolor {
    color: #777777;
}

.footertext {
    font-size: 12px;
    color: #cccccc;
}


/* Background image */
html {
    background-image: url(../images/wood_pattern.png);
    background-repeat: repeat-x repeat-y; 
}

